# tryhaskell

./: .ghci  .gitignore  CHANGELOG.md  Imports.hs  LICENSE  README  README.md  cabal.config  gzip.php  index.html  index.php  package.yaml  stack.yaml  tryhaskell.cabal  under-maintenance.html
app/: Main.hs
css/: .#reset.css  DejaVuSansMono.eot  demo.html~  fontsquirrel.css  fontsquirrel.css~  tryhaskell.css  tryhaskell.css~  tryhaskell.ie6.css
fly/: Dockerfile  README.md  fly.toml
js/: jquery.console.js  jquery.console.js~  jquery.curvycorners.min.js  supersleight-min.js  tryhaskell.js  tryhaskell.js~  tryhaskell.min.js
scripts/: cron  restart  start
src/: .dir-locals.el  DevelMain.hs  Main.hs  TryHaskell.hs
src/main/: Main.hs
src/test/: Main.hs
static/: tryhaskell.css
static/css/: tryhaskell.css
static/js/: jquery.console.js  tryhaskell.js  tryhaskell.pages.js
