name:                tryhaskell
version:             0.0
synopsis:            Try Haskell!
description:         Try Haskell!
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Education
build-type:          Simple
cabal-version:       >=1.8
data-files:          Imports.hs

library
  exposed-modules:   TryHaskell
  other-modules:     Paths_tryhaskell
  hs-source-dirs:    src/
  ghc-options:       -Wall
  build-depends:     base >= 4 && < 5,
                     snap-server,
                     snap-core,
                     blaze,
                     aeson >= 0.8.0.1,
                     mueval,
                     process-extras,
                     text,
                     mtl,
                     bytestring >= 0.10.4.0,
                     pure-io,
                     safe,
                     unordered-containers,
                     time,
                     hashable,
                     old-locale,
                     containers,
                     bifunctors

executable tryhaskell
  hs-source-dirs:    src/main
  main-is:           Main.hs
  build-depends:     base, tryhaskell
  ghc-options:       -Wall -O2 -threaded

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: src/test
    build-depends: base, tryhaskell
